# tgreports

./: AGENTS.md  Makefile  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
docs/: TGREPORTS GUIDE.md
tests/: .pylintrc  __init__.py  test_all.py
tgreports/: __init__.py  log.conf  main.py
