[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgreports"
version = "0.19"
description = "Reports and logs on Telegram"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Alex Poloz", email = "alexypoloz@gmail.com" }]
requires-python = ">=3.8,<4"
keywords = ["reports", "logs", "logging", "notifications", "alerts", "Telegram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "tgio>=0.15,<1",
    "loguru>=0.7.3,<1",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "setuptools>=80.9.0",
    "pylint==4.0.4",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "twine==6.2.0",
]

[project.urls]
Homepage = "https://github.com/chilleco/tgreports"
Repository = "https://github.com/chilleco/tgreports"
Source = "https://github.com/chilleco/tgreports"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests"]
